--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@astrojs/image": "^0.7.0",
     "@astrojs/react": "^1.1.3",
     "@astrojs/tailwind": "^2.0.1",
+    "@nanostores/react": "^0.4.0",
     "astro": "^1.2.6",
     "clsx": "^1.2.1",
+    "nanostores": "^0.7.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
