--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nanostores": "^0.7.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.4.0",
     "react-infinite-scroll-component": "^6.1.0",
     "tailwindcss": "^3.0.24"
   },
