--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/image": "^0.7.0",
     "@astrojs/react": "^1.1.3",
     "@astrojs/tailwind": "^2.0.1",
+    "@astrojs/vercel": "^2.0.0",
     "@nanostores/react": "^0.4.0",
     "astro": "^1.2.6",
     "clsx": "^1.2.1",
